--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,16 @@
 <html>
   <head>
     <title> HTML Student Handbook</title>
+    <link rel="icon" href="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187.jpg?w=718&h=479"/>
   </head>
   <body>
     <h1> Section 1: Text & Headings</h1>
-    <p>THe foundation of every webpage is text.</p>
+    <p>Te foundation of every webpage is text.</p>
     <p>We use these tags to tell the browser what is a title and what is a paragrah.</p>
-    <h1>2 Level heading example</h1>
-    <h2> 3 level heading example</h2>
-    <p>paragraphs are used for the bulk of your content.</p>
+    <h1>2 Level Heading Example</h1>
+    <h2> 3 Level Heading Example</h2>
+    <p>Paragraphs are used for the bulk of your content.</p>
     <p>They automatically add a little bit of space above and below the text</p>
-    <a href="..."> Continue to next topic </a>
+    <a href="contact.html"> Continue to next topic </a>
   </body>
-</html></htnl>
+</html>
